--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
+cachetools==4.0.0
+certifi==2019.11.28
+chardet==3.0.4
 cycler==0.10.0
+google-api-core==1.16.0
+google-auth==1.11.2
+google-cloud==0.34.0
+google-cloud-core==1.3.0
+google-cloud-storage==1.26.0
+google-resumable-media==0.5.0
+googleapis-common-protos==1.51.0
+idna==2.9
 joblib==0.14.1
 kiwisolver==1.1.0
 matplotlib==3.1.3
@@ -6,12 +17,18 @@ numpy==1.18.1
 pandas==1.0.1
 patsy==0.5.1
 pickle-mixin==1.0.2
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
+requests==2.23.0
+rsa==4.0
 scikit-learn==0.22.2.post1
 scipy==1.4.1
 seaborn==0.10.0
 six==1.14.0
 sklearn==0.0
 statsmodels==0.11.1
+urllib3==1.25.8
